Config von Live

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.entire_site.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.entire_site.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: 0ziF0ShQzLTglyja9_chf5qouy7Ce3i-254JN-PWmk4
 id: entire_site
-label: 'Entire Site'
+label: 'Gesamte Website'
 type: EntireSite
 config:
   name: 'Entire Site'
