--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/colorbox.settings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/colorbox.settings.yml
@@ -4,9 +4,9 @@ custom:
   transition_type: elastic
   transition_speed: 350
   opacity: 0.85
-  text_current: '{current} of {total}'
-  text_previous: '« Prev'
-  text_next: 'Next »'
+  text_current: '{current} von {total}'
+  text_previous: '« Zurück'
+  text_next: 'Weiter »'
   text_close: Close
   maxwidth: 98%
   maxheight: 98%
