--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.taxonomy_term.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.taxonomy_term.yml
@@ -8,4 +8,4 @@ id: taxonomy_term
 label: Taxonomie-Begriff
 tags:
   title: '[term:name] | [site:name]'
-  description: '[term:description]'
+  description: '[Begriff:description]'
