--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.user.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/metatag.metatag_defaults.user.yml
@@ -7,5 +7,5 @@ _core:
 id: user
 label: Benutzer
 tags:
-  title: '[user:name] | [site:name]'
+  title: '[Benutzer:name] | [Website:name]'
   description: '[site:name]'
