--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.likert_satisfaction.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.likert_satisfaction.yml
@@ -8,5 +8,5 @@ dependencies:
 _core:
   default_config_hash: neOMp5gtbo4DzHTQAmmvrsN8VkSA7LXCl5R1oXTqKX0
 id: likert_satisfaction
-label: 'Likert: Satisfaction'
-options: "1: Very Unsatisfied\n2: Unsatisfied\n3: Neutral\n4: Satisfied\n5: Very Satisfied\n"
+label: 'Likert: Zufriedenheit'
+options: "1: Sehr unzufrieden\r\n2: Unzufrieden\r\n3: Neutral\r\n4: Zufrieden\r\n5: Sehr zufrieden\n"
