--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_destination.private_files.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_destination.private_files.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: 4iy5jeoTP0Y4BqSaV1C6cz4GKLFea1tWzk3ez1_CMVU
 id: private_files
-label: 'Private Files Directory'
+label: 'Privates Dateiverzeichnis'
 type: Directory
 config:
   name: 'Private Files Directory'
