--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.private_files.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.private_files.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: skfrgCS5JC2HXCG6QfQfiuuFWy_-OQ5Qs0FvaPwc6Vc
 id: private_files
-label: 'Private Files Directory'
+label: 'Privates Dateiverzeichnis'
 type: DrupalFiles
 config:
   name: 'Private Files Directory'
