--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.public_files.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_migrate.backup_migrate_source.public_files.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: PY9HA-hogF4_qq5gZ-TqZDTixx170-APxTcq4rpa014
 id: public_files
-label: 'Public Files Directory'
+label: 'Öffentliches Dateiverzeichnis'
 type: DrupalFiles
 config:
   name: 'Public Files Directory'
