--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.webform_submission_delete_action.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.action.webform_submission_delete_action.yml
@@ -7,7 +7,7 @@ dependencies:
 _core:
   default_config_hash: TBnl4vapW7sy5bRi7TcF-ueJnvz7aZNLif95ifvhfTQ
 id: webform_submission_delete_action
-label: 'Delete submission'
+label: 'Webformular-Eingabe löschen'
 type: webform_submission
 plugin: webform_submission_delete_action
 configuration: {  }
