--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/tour.tour.locale.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/tour.tour.locale.yml
@@ -16,14 +16,14 @@ tips:
   locale-overview:
     id: locale-overview
     plugin: text
-    label: 'User interface translation'
-    body: 'This page allows you to translate the user interface or modify existing translations. If you have installed your site initially in English, you must first add another language on the <a href="[site:url]/admin/config/regional/language">Languages page</a>, in order to use this page.'
+    label: Benutzeroberflächenübersetzung
+    body: 'Diese Seite erlaubt es die Benutzeroberfläche zu übersetzen oder bestehende Übersetzungen zu abzuändern. Falls die Website eingangs in Englisch installiert wurde, muss zuerst eine weitere Sprache auf der <a href="[site:url]admin/config/regional/language">Sprachen-Seite</a> hinzugefügt werden, um diese Seite nutzen zu können.'
     weight: 1
   locale-language:
     id: locale-language
     plugin: text
     label: 'Translation language'
-    body: 'Choose the language you want to translate.'
+    body: 'Die Sprache, die übersetzt werden soll, auswählen.'
     weight: 2
     attributes:
       data-id: edit-langcode
@@ -31,23 +31,23 @@ tips:
     id: locale-search
     plugin: text
     label: Search
-    body: 'Enter the specific word or sentence you want to translate, you can also write just a part of a word.'
+    body: 'Eingabe eines bestimmten Wortes oder Satzes, das übersetzt werden soll. Es kann auch nur ein Teil eines Wortes angegeben werden.'
     weight: 3
     attributes:
       data-id: edit-string
   locale-filter:
     id: locale-filter
     plugin: text
-    label: 'Filter the search'
-    body: 'You can search for untranslated strings if you want to translate something that isn''t translated yet. If you want to modify an existing translation, you might want to search only for translated strings.'
+    label: 'Die Suche eingrenzen'
+    body: 'Es kann nach nicht übersetzten Zeichenketten gesucht werden, um etwas zu übersetzen, was bisher noch nicht übersetzt worden ist. Falls eine bereits bestehende Übersetzung abgeändert werden soll, dann sollte besser nur nach bereits übersetzten Zeichenketten gesucht werden.'
     weight: 4
     attributes:
       data-id: edit-translation
   locale-submit:
     id: locale-submit
     plugin: text
-    label: 'Apply your search criteria'
-    body: 'To apply your search criteria, click on the <em>Filter</em> button.'
+    label: 'Suchkriterien anwenden'
+    body: 'Um die Suchkriterien anzuwenden, auf den <em>Filter</em>-Button klicken.'
     weight: 5
     attributes:
       data-id: edit-submit
@@ -55,21 +55,21 @@ tips:
     id: locale-translate
     plugin: text
     label: Translate
-    body: 'You can write your own translation in the text fields of the right column. Try to figure out in which context the text will be used in order to translate it in the appropriate way.'
+    body: 'Die eigene Übersetzung kann in die Textfelder in der rechten Spalte eingegeben werden. Es sollte versucht werden herauszufinden in welchem Kontext der Text verwendet werden soll, um ihn sachgemäß zu übersetzen.'
     weight: 6
     attributes:
       data-class: js-form-type-textarea
   locale-validate:
     id: locale-validate
     plugin: text
-    label: 'Validate the translation'
-    body: 'When you have finished your translations, click on the <em>Save translations</em> button. You must save your translations, each time before changing the page or making a new search.'
+    label: 'Die Übersetzungen prüfen und speichern'
+    body: 'Sobald die Übersetzungen abgeschlossen sind, werden diese über einen Klick auf den Button </em>Übersetzungen speichern</em> abgespeichert. Die Übersetzungen müssen immer abgespeichert werden, bevor Änderungen an der Seite vorgenommen werden oder eine neue Suche durchgeführt wird. Andernfalls gehen die vorgenommenen Änderungen verloren.'
     weight: 7
     attributes:
       data-id: edit-submit--2
   locale-continue:
     id: locale-continue
     plugin: text
-    label: 'Continuing on'
-    body: 'The translations you have made here will be used on your site''s user interface. If you want to use them on another site or modify them on an external translation editor, you can <a href="[site:url]/admin/config/regional/translate/export">export them</a> to a .po file and <a href="[site:url]/admin/config/regional/translate/import">import them</a> later.'
+    label: 'Übersetzungen wiederverwenden'
+    body: "Hier erstellte Übersetzungen werden in der Benutzeroberfläche der vorliegenden Website verwendet. Sollen diese auf einer weiteren Website verwendet oder in einem externen Übersetzungseditor abgeändert werden, kann eine .po Datei \r\n<a href=\"[site:url]admin/config/regional/translate/export\">exportiert</a> und im Anschluss <a href=\"[site:url]admin/config/regional/translate/import\">importiert</a> werden."
     weight: 8
