--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.ethnicity.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.ethnicity.yml
@@ -8,5 +8,5 @@ dependencies:
 _core:
   default_config_hash: SSV6f9SV3qO5qcz99jSqj7-2eGNaD9RfOYDdMPUffew
 id: ethnicity
-label: Ethnicity
-options: "Caucasian: Caucasian\n'Latino/Hispanic': 'Latino/Hispanic'\n'Middle Eastern': 'Middle Eastern'\nAfrican: African\nCaribbean: Caribbean\n'South Asian': 'South Asian'\n'East Asian': 'East Asian'\nMixed: Mixed\n"
+label: Volkszugehörigkeit
+options: "Kaukasisch: Kaukasisch\n'Latino/Hispanisch': 'Latino/Hispanisch'\n'Nahöstlich': 'Nahöstlich'\nAfrikanisch: Afrikanisch\nKaribisch: Karibisch\n'Südasiatisch':'Südasiatisch'\n'Ostasiatisch': 'Ostasiatisch'\nGemischt: Gemischt\n"
