--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.likert_would_you.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.likert_would_you.yml
@@ -9,4 +9,4 @@ _core:
   default_config_hash: 98M-DPZLTuMVYsG1XrXy1h90nf3al-jgdqGJrW8Elcg
 id: likert_would_you
 label: 'Likert: Would You'
-options: "1: Definitely Not\n2: Probably Not\n3: Not Sure\n4: Probably\n5: Definitely\n"
+options: "1: Definitiv Nicht\n2: Wahrscheinlich nicht\n3: Nicht sicher\n4: Wahrscheinlich\n5: Definitiv\n"
