--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.months.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/webform.webform_options.months.yml
@@ -8,5 +8,5 @@ dependencies:
 _core:
   default_config_hash: Y0ajkmoLjJ568EZRzaBSy_vEejATn3EA2RTymPoGZ5U
 id: months
-label: Months
-options: "January: January\nFebruary: February\nMarch: March\nApril: April\nMay: May\nJune: June\nJuly: July\nAugust: August\nSeptember: September\nOctober: October\nNovember: November\nDecember: December\n"
+label: Monate
+options: "Januar: Januar\nFebruar: Februar\nMärz: März\nApril: April\nMai: Mai\nJuni: Juni\nJuli: Juli\nAugust: August\nSeptember: September\nOktober: Oktober\nNovember: November\nDezember: Dezember\n"
